Fixing issue where the install root is not defined when running the boot jar tool or tests; the install root is no longer required.